# Road_sos

./: .dockerignore  .editorconfig  .env.example  .flake8  .flutter-plugins-dependencies  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .last_build_id  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  AGENTS.md  AUTHENTICATION_SETUP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  analysis_options.yaml  cliff.toml  main.dart.js  pubspec.yaml  pyproject.toml  roadside_help_test.db  setup-gitlab-runner.sh  setup.cfg  vercel.json  version.json
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature_Request.md  Setup_and_Dev_Query.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  roadside_help.db  roadside_help.db-shm  roadside_help.db-wal  roadside_help_test.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_request_fare_helper.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  categories.py  helpers.py  profile.py  requests.py  reviews.py
backend/app/core/: config.py  deps.py  errors.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  enums.py  helper.py  request.py  user.py
backend/app/schemas/: ai.py  auth.py  category.py  helper.py  request.py  review.py  user.py
backend/app/seed/: run.py
backend/app/services/: ai_service.py  auth_service.py  category_service.py  geo.py  helper_service.py  profile_service.py  request_service.py  review_service.py  sms.py
backend/tests/: _create_test_db.py  conftest.py
backend/tests/contract/: test_auth.py  test_helpers.py  test_profile_reviews.py  test_provider.py  test_requests.py
backend/tests/integration/: test_accept_race.py  test_request_flow.py
backend/tests/unit/: test_ai_proxy.py  test_geo.py  test_request_state.py  test_sms.py
docs/: CLAUDE.md  CONTRIBUTING.md  PROVIDERS.md  USER_MANUAL.md
frontend/: .flutter-plugins-dependencies
frontend/test/: flutter_test_config.dart
frontend/web/: RoadAid-Loaders-Showcase.html  index.html  welcome.html
lib/: main.dart
reports/: Roadside-SOS-Weekly-Progress.docx  Roadside-SOS-Weekly-Progress.md  internship_project_report_I.docx  internship_project_report_I.md
scripts/: setup-gitlab-runner.sh
web/: app.html  index.html  manifest.json  welcome.html
(+140 files in other folders)
