[project]
name = "roadside-help"
version = "0.1.0"
description = "Two-sided roadside assistance marketplace prototype (Flutter Web + FastAPI Backend)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["build/", "ios/", "android/", ".venv/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "ios", "android"]

[tool.vulture]
min_confidence = 80
paths = ["backend"]
sort_by_size = true
exclude = [".venv", "build"]

[tool.pylint]
max-line-length = 100
disable = ["C0111", "R0903"]
ignore = [".venv", "build", "ios", "android"]

[tool.vercel]
entrypoint = "backend.app.main:app"

