[project]
name = "roadside-help"
version = "0.1.0"
description = "Two-sided roadside assistance marketplace prototype (Flutter Web + FastAPI Backend)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["build/", "ios/", "android/", ".venv/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "ios", "android"]

[tool.vulture]
min_confidence = 80
paths = ["backend"]
sort_by_size = true
exclude = [".venv", "build"]

[tool.pylint.master]
load-plugins = []
jobs = 1

[tool.pylint."messages control"]
disable = ["C0111", "R0903", "C0114", "C0115", "C0116"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "e", "x", "v", "db", "id", "_"]

[tool.pylint.design]
max-args = 8

[tool.pyupgrade]
py3-plus = true
py311-plus = true
keep-percent-format = false

[tool.semgrep]
config = [".semgrep.yml"]

[tool.flake8]
max-line-length = 100
exclude = [".git", ".venv", "build", "ios", "android", "backend/.venv"]
ignore = ["E203", "W503"]

[tool.vercel]
entrypoint = "backend.app.main:app"

