[project]
name = "roadside-help-backend"
version = "0.1.0"
description = "FastAPI + PostgreSQL backend for the Roadside Help marketplace prototype"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
